# lector

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  lector-document.h  lector-document.pc.in  lector-view.h  lector-view.pc.in  lector.pot  makepot  output_3197215020561214a63e0691f20921c51d3da975  update-authors.pl
.github/: issue_template.md
.tx/: config
2024-02-17-122858-54189-1@1ad5418f44dd_devel/: index.html  output_1ad5418f44dd1b7ab8b1177b4ff1ffec226789e1  report-09346c.html  report-0e3c55.html  report-17ab6b.html  report-1d26db.html  report-1dbc7c.html  report-292f55.html  report-2a7496.html  report-2e1fcd.html  report-36b3f0.html  report-3f4f24.html  report-4467dd.html  report-45c340.html  report-478b0a.html  report-48c265.html  report-49f0f7.html  report-4c18a7.html  report-4e7226.html  report-4faa85.html  report-4fee24.html  report-506ceb.html  report-543104.html  report-54ec38.html  report-5c49e3.html  report-5c945e.html  report-5f202f.html  report-657b24.html  report-6a2f21.html  report-6ec129.html  report-706a46.html  report-73a3b8.html  report-77b06c.html  report-806b0c.html  report-808cc7.html  report-8690ef.html  report-87da93.html  report-8efebf.html  report-9d175c.html  report-9d1d93.html  (+27 more)
2024-02-17-122904-5097-cppcheck@a91d23da5a62_devel/: 53.html  57.html  75.html  90.html  95.html  commitmsg  output_a91d23da5a6202a69ab5a2d6223643c3f92fccf8
2024-02-17-123213-9168-cppcheck@209f85846670_devel/: 11.html  111.html  26.html  29.html  45.html  65.html  80.html  86.html  output_209f858466707be7c7d2686daf134913d96b5b92
2024-02-17-123254-54188-1@e5d92c4f8af9_devel/: index.html  output_e5d92c4f8af9441426074589637da5c1a4772574  report-09346c.html  report-0e3c55.html  report-17ab6b.html  report-1d26db.html  report-1dbc7c.html  report-292f55.html  report-2a7496.html  report-2e1fcd.html  report-36b3f0.html  report-3f4f24.html  report-4467dd.html  report-45c340.html  report-478b0a.html  report-48c265.html  report-49f0f7.html  report-4c18a7.html  report-4e7226.html  report-4faa85.html  report-4fee24.html  report-506ceb.html  report-543104.html  report-54ec38.html  report-5c49e3.html  report-5c945e.html  report-5f202f.html  report-657b24.html  report-6a2f21.html  report-6ec129.html  report-706a46.html  report-73a3b8.html  report-77b06c.html  report-806b0c.html  report-808cc7.html  report-8690ef.html  report-87da93.html  report-8efebf.html  report-9d175c.html  report-9d1d93.html  (+27 more)
2024-02-17-123548-54190-1@936a1401c691_devel/: commitmsg  index.html  report-09346c.html  report-0e3c55.html  report-17ab6b.html  report-1d26db.html  report-1dbc7c.html  report-292f55.html  report-2a7496.html  report-2e1fcd.html  report-36b3f0.html  report-3f4f24.html  report-4467dd.html  report-45c340.html  report-478b0a.html  report-48c265.html  report-49f0f7.html  report-4c18a7.html  report-4e7226.html  report-4faa85.html  report-4fee24.html  report-506ceb.html  report-543104.html  report-54ec38.html  report-5c49e3.html  report-5c945e.html  report-5f202f.html  report-657b24.html  report-6a2f21.html  report-6ec129.html  report-706a46.html  report-73a3b8.html  report-77b06c.html  report-806b0c.html  report-808cc7.html  report-8690ef.html  report-87da93.html  report-8efebf.html  report-9d175c.html  report-9d1d93.html  (+27 more)
2024-02-17-123617-2500-cppcheck@1ad5418f44dd_devel/: 108.html  33.html  48.html  54.html  55.html  74.html  78.html  88.html  96.html  99.html  commitmsg
2024-02-17-123621-54189-1@16f55cc4aa06_devel/: commitmsg  index.html  output_16f55cc4aa06fd6364184004a10039ac06160b7a  report-09346c.html  report-0e3c55.html  report-17ab6b.html  report-1d26db.html  report-1dbc7c.html  report-292f55.html  report-2a7496.html  report-2e1fcd.html  report-36b3f0.html  report-3f4f24.html  report-4467dd.html  report-45c340.html  report-478b0a.html  report-48c265.html  report-49f0f7.html  report-4c18a7.html  report-4e7226.html  report-4faa85.html  report-4fee24.html  report-506ceb.html  report-543104.html  report-54ec38.html  report-5c49e3.html  report-5c945e.html  report-5f202f.html  report-657b24.html  report-6a2f21.html  report-6ec129.html  report-706a46.html  report-73a3b8.html  report-77b06c.html  report-806b0c.html  report-808cc7.html  report-8690ef.html  report-87da93.html  report-8efebf.html  report-9d175c.html  (+28 more)
2024-02-17-123959-2674-cppcheck@e5d92c4f8af9_devel/: 0.html  103.html  106.html  110.html  17.html  34.html  36.html  43.html  44.html  79.html  82.html  85.html  92.html  93.html  98.html
2024-02-17-124057-54187-1@e9ea1d5c8797_devel/: index.html  report-09346c.html  report-0e3c55.html  report-17ab6b.html  report-1d26db.html  report-1dbc7c.html  report-292f55.html  report-2a7496.html  report-2e1fcd.html  report-36b3f0.html  report-3f4f24.html  report-4467dd.html  report-45c340.html  report-478b0a.html  report-48c265.html  report-49f0f7.html  report-4c18a7.html  report-4e7226.html  (+48 more)
properties/: Makefile.am  ev-properties-main.c  ev-properties-view.c  ev-properties-view.h  liblector-properties-page.baul-extension.desktop.in.in  liblector-properties-page.caja-extension.desktop.in.in
shell/: Makefile.am  eggfindbar.c  eggfindbar.h  ev-annotation-properties-dialog.c  ev-annotation-properties-dialog.h  ev-application.c  ev-application.h  ev-bookmark-action.c  ev-bookmark-action.h  ev-bookmarks.c  ev-daemon-gdbus.xml  ev-daemon.c  ev-file-monitor.c  ev-file-monitor.h  ev-gdbus.xml  ev-keyring.c  ev-keyring.h  ev-loading-message.c  ev-loading-message.h  ev-media-player-keys.c  ev-message-area.c  ev-message-area.h  ev-metadata.c  ev-metadata.h  ev-navigation-action-widget.c  ev-navigation-action-widget.h  ev-navigation-action.c  ev-navigation-action.h  ev-open-recent-action.c  ev-open-recent-action.h  ev-password-view.c  ev-password-view.h  ev-progress-message-area.c  ev-progress-message-area.h  ev-properties-dialog.c  ev-properties-dialog.h  ev-properties-fonts.c  ev-properties-fonts.h  ev-properties-license.c  ev-properties-license.h  (+24 more)
thumbnailer/: Makefile.am  lector-thumbnailer.1  lector-thumbnailer.c  lector.thumbnailer.in
(+1894 files in other folders)
